# python-project-83

./: .env  .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: main.yml
page_analyzer/: __init__.py  app.py  normalisator.py  parser.py  validator.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
